# NeuroGuard-AI

./: .gitignore  .gitlab-ci.yml  Grid Search embeddings + n_epochs.ipynb  LICENSE  QUICKSTART.md  README.md  ai013.ipynb  coh_kolory.py  coh_model.pth  coh_test.py  coh_visualization.py  coh_visualize_distances.py  eeg_cli.py  grid search - extractor params.ipynb  main.py  main_coh.py  pyproject.toml  requirements.txt  setup.py  test_imports.py
eeg_lib/: __init__.py  __main__.py  cli.py  datastructures.py  types.py
eeg_lib/commons/: __init__.py  constant.py  logger.py
eeg_lib/data/: EEGDataExtractor.py  ProxyDataset.py  TDNNDataset.py  TDNNaugmentation.py  TripletDataset.py  __init__.py  augmentation.py  data_setup.py  datasets.py  eeg_data_extractor_v2.py  encode_features_labels.py  preprocessors.py  subject_based_split.py  triplet_dataset.py
eeg_lib/data/data_loader/: EEGDataExtractor.py  EEGDataExtractorV2.py  TDNNFeatures.py  __init__.py  custom_data_loader.py  eeg_data_extractor.py  eeg_data_extractor_v2.py  example.ipynb
eeg_lib/evaluation/: __init__.py  evaluator.py
eeg_lib/losses/: ArcFaceLoss.py  ProxyNCALoss.py  __init__.py  triplet_loss.py
eeg_lib/models/: __init__.py  conv.py
eeg_lib/models/similarity/: __init__.py  apt.py  apt_model.py  centroids.py  coherence_model.py  conv.py  eegnet.py  fbcnet.py
eeg_lib/models/verification/: EEGNet.py  EEGnet.py  (+2 more)
eeg_lib/pipelines/: __init__.py  conv_training.py  embedding_generation.py  grid_search.py  verification.py
eeg_lib/training/: trainer.py
eeg_lib/utils/: __init__.py  directories.py  engine.py  helpers.py  random_seed.py  visualisations.py
eeg_lib/visualization/: __init__.py  visualizer.py
examples/: basic_usage.py  train_example.py
models/: checkpoint_epoch_1.pth  eegnet_final.pth
neuroguard/: __init__.py  __main__.py  cli.py  datastructures.py  types.py
neuroguard/commons/: __init__.py  constant.py  logger.py
neuroguard/data/: augmentation.py  data_setup.py  eeg_triplet_dataset.py  tdnn_features.py  triplet_dataset.py  triplet_dataset_.py
neuroguard/evaluation/: __init__.py  evaluator.py
neuroguard/losses/: proxynca_loss.py
neuroguard/pipelines/: conv_training.py  grid_search.py  verification.py
neuroguard/training/: __init__.py  trainer.py
neuroguard/utils/: engine.py  helpers.py  random_seed.py
neuroguard/visualization/: __init__.py  visualizer.py
notebooks/: AL_EDA.ipynb  AL_final_notebook.ipynb  AL_podsumowanie.ipynb  AutoencoderTraining.ipynb  BD_EDA.ipynb  DataExtractorGrid.ipynb  ECAPA_Notebook.ipynb  EDA.ipynb  EEGNet1.ipynb  FBCNetTraining.ipynb  Final_Notebook.ipynb  JS_EDA.ipynb  JS_EDA_Proxy.ipynb  JS_EDA_XVector.ipynb  VisualizeExtractorGrid.ipynb  eeg_extractor_grid_search.json  eeg_extractor_grid_search_v2.json  eeg_extractor_grid_search_v3.json  loading_data.py  model.pth  playing.ipynb
notebooks/Barbara_Dereń/: EEGNet1.ipynb  eegnet_model.pth  notebook.ipynb
notebooks/KamilWrobel/: EEGEmbedderV1.ipynb  Grid Search embeddings + n_epochs.ipynb  grid search - extractor params.ipynb
notebooks/barbara_deren/: EDA.ipynb  notebook.ipynb
notebooks/grzegorz_szczepanek/: EEGNetTest1.ipynb
notebooks/jedrzej_sajnog/: DataExtractorGrid.ipynb  ECAPA_Notebook.ipynb  EDA.ipynb  Final_Notebook.ipynb  RealData_Naive.ipynb  VisualizeExtractorGrid.ipynb
notebooks/kamil_wrobel/: EEGEmbedderV1.ipynb
notebooks/models/: FCBNet3390  FCBNet3680  FCBNet4000  FCBNet4220  checkpoint_{epoch}
pipelines/coh/: confusion_matrix.py
src/: datasets.py  load_data.py
tests/: test_dummy.py  test_eeg_data_extractor.py  test_imports.py
(+351 files in other folders)
