[tool.poetry]
name = "eeg_lib"
version = "0.0.1"
description = "EEG verification lib"
authors = ["AI Team"]
readme = "README.md"
license = ""
packages = [{include = "eeg_lib"}]

[tool.poetry.dependencies]
python = "3.12.7"
torch = "2.6.0"
numpy = "1.26.4"
pandas = "2.2.3"
tqdm = "4.67.1"
mne = "1.9.0"
triton = { version = "3.2.0", optional = true }
pyright = "^1.1.395"
scikit-learn = "^1.7.2"
umap = "^0.1.1"

[tool.poetry.extras]
gpu = ["triton"]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0,<8.0.0"
black = ">=23.9.0,<24.0.0"
flake8 = ">=6.1.0,<7.0.0"
mypy = ">=1.5.0,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
