[tool.poetry]
name = "eeg_lib"
version = "0.0.1"
description = "EEG verification lib"
authors = ["AI Team"]
readme = "README.md"
license = ""
packages = [{include = "eeg_lib"}]

[tool.poetry.dependencies]
python = "3.12.7"
torch = "2.6.0"
numpy = "1.26.4"
pandas = "2.2.3"
tqdm = "4.67.1"
mne = "1.9.0"
triton = { version = "3.2.0", optional = true }
pyright = "^1.1.395"
scikit-learn = "^1.7.2"
umap = "^0.1.1"
torchvision="0.24.1"
tensorboard = "2.19.0"
umap-learn = "^0.5.7"

[tool.poetry.extras]
gpu = ["triton"]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0,<8.0.0"
black = ">=23.9.0,<24.0.0"
flake8 = ">=6.1.0,<7.0.0"
mypy = ">=1.5.0,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_any_unimported = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Exclude patterns
exclude = [
    "^notebooks/",
    "^venv/",
    "^.venv/",
    "\\.ipynb$",
]

# Per-module options for third-party libraries without stubs
[[tool.mypy.overrides]]
module = [
    "mne.*",
    "umap.*",
    "tensorboard.*",
    "pandas.*",
    "sklearn.*",
    "torchvision.*",
    "requests.*",
]
ignore_missing_imports = true

[tool.pyright]
include = ["eeg_lib"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "notebooks",
    "venv",
    ".venv",
]
typeCheckingMode = "strict"
pythonVersion = "3.12"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownLambdaType = false
reportImportCycles = true
reportUnnecessaryIsInstance = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportAssertAlwaysTrue = true
reportSelfClsParameterName = true
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportDuplicateImport = true
